# Adaptive-AI-for-Personalized-Learning

./: README.md
Chapters Crew/chaptersflow/: README.md  pyproject.toml  report.md  report_os.md
Chapters Crew/chaptersflow/chaptersflow/src/chaptersflow/tools/pdfs/: chroma.sqlite3
Chapters Crew/chaptersflow/src/chaptersflow/: main.py
Chapters Crew/chaptersflow/src/chaptersflow/crews/chapterscrew/: crew.py
Chapters Crew/chaptersflow/src/chaptersflow/crews/chapterscrew/config/: agents.yaml  tasks.yaml
Chapters Crew/chaptersflow/src/chaptersflow/tools/: chroma.sqlite3  ingest.py  query1.py  report.md
Chapters Crew/chaptersflow/src/chaptersflow/tools/chaptersflow/src/chaptersflow/pdfs/: chroma.sqlite3
Chapters Crew/chaptersflow/src/chaptersflow/tools/pdfs/: chroma.sqlite3
Content Crew/contentcrew/: README.md  content.md  content_os.md  pyproject.toml
Content Crew/contentcrew/src/contentcrew/: crew.py  main.py
Content Crew/contentcrew/src/contentcrew/config/: agents.yaml  manager.yaml  tasks.yaml
Content Crew/contentcrew/src/contentcrew/tools/: custom_tool.py
Evaluation Crew/evaluationcrew/: README.md  answers.md  answers.txt  evaluation_report.md  pyproject.toml
Evaluation Crew/evaluationcrew/src/evaluationcrew/: crew.py  main.py
Evaluation Crew/evaluationcrew/src/evaluationcrew/config/: agents.yaml  tasks.yaml
Testing Crew/testingflow/: README.md  pyproject.toml  questions.md
Testing Crew/testingflow/src/testingflow/: main.py  report.md
Testing Crew/testingflow/src/testingflow/crews/test_crew/: crew.py
Testing Crew/testingflow/src/testingflow/crews/test_crew/config/: agents.yaml  tasks.yaml
Testing Crew/testingflow/src/testingflow/tools/: custom_tool.py
front/: package-lock.json  package.json
front/src/: App.tsx  index.tsx
front/src/components/: assessments.tsx  content.tsx  contentdsa.tsx  contentemb.tsx  home.tsx  report.tsx
front/tem/: app.txt  home.txt
