[project]
name = "contentcrew"
version = "0.1.0"
description = "contentcrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
contentcrew = "contentcrew.main:run"
run_crew = "contentcrew.main:run"
train = "contentcrew.main:train"
replay = "contentcrew.main:replay"
test = "contentcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
